app/app.css
@import "tailwindcss";
@import "./routeTransitions.css";

@theme {
  --font-sans: "Arimo", ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

  --color-dodger-blue: oklch(67.025% 0.17475 249.86);
  --color-dodger-blue-50: oklch(0.99 0.002854 264.5422);
  --color-dodger-blue-100: oklch(0.98 0.0109 243.65);
  --color-dodger-blue-150: oklch(0.96 0.0186 242.96);
  --color-dodger-blue-200: oklch(0.91 0.0465 241.36);
  --color-dodger-blue-300: oklch(77.81% 0.11542 245.64);
  --color-dodger-blue-400: oklch(72.278% 0.14707 247.11);
  --color-dodger-blue-500: oklch(67.025% 0.17475 249.86);
  --color-dodger-blue-600: oklch(58.998% 0.18052 253);
  --color-dodger-blue-700: oklch(48.383% 0.14491 252.39);
  --color-dodger-blue-800: oklch(37.149% 0.10699 251.19);
  --color-dodger-blue-900: oklch(24.624% 0.06525 248.39);
  --color-dodger-blue-950: oklch(18.035% 0.04257 244.95);
}

html,
body {
  @apply bg-dodger-blue-100;
  @apply text-dodger-blue;
}

.box-wide, .box-narrow {
  @apply m-auto bg-white border border-dodger-blue-200 grid grid-rows-[auto_1fr_auto];
}

.box-narrow {
  @apply grow max-w-[280px];
}

.box-wide {
  @apply grow max-w-[613px] min-h-[370px];
}

.box-header, .box-footer {
  @apply flex-none
}

.box-header {
  @apply row-start-1 p-12 min-h-[210px] flex flex-col justify-between;
}

.box-superscript {
  @apply font-semibold uppercase;
}

.box-title {
  @apply font-bold text-4xl;
}

.box-body {
  @apply row-start-2
}

.box-ribbon {
  @apply px-10 py-4 h-full flex items-center bg-dodger-blue-50 border-y border-dodger-blue-200;
}

.box-list {
  @apply border-t border-b border-dodger-blue-150 divide-y max-h-[250px] overflow-y-scroll;
}

.box-list-item {
  @apply px-8 py-5 border-dodger-blue-150 bg-dodger-blue-50;
}

.box-footer {
  @apply row-start-3 py-8 uppercase font-bold flex justify-around;
}

button {
  @apply uppercase cursor-pointer;
}

